alignment issue pending

--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -2,6 +2,9 @@ html,
 * {
   box-sizing: border-box;
 }
+html{
+  font-size:14px
+}
 
 body {
   margin: 0;
@@ -214,4 +217,58 @@ body[data-route="analyze-page"] .analyze-page {
   overflow-y: auto;
   max-height:calc(0.62 * 600px);
   padding-right: 5px/*scrollbar width*/;
+}
+details li{
+  max-lines: 2;
+  text-overflow: ellipsis;
+  width:100%
+}
+
+/*
+------------
+checkbox
+------------
+*/
+.checkbox {
+  display: inline-grid;
+  grid-template-columns: -webkit-min-content auto;
+  grid-template-columns: min-content auto;
+  grid-gap: 0.5em;
+  font-size: 1rem;
+  color: var(--color);
+}
+
+
+.checkbox__control {
+  display: inline-grid;
+  /* grid-template-columns: 1fr 1fr; */
+  width: 1rem;
+  height: 1rem;
+  border-radius: 0.25rem;
+  border: 0.1em solid currentColor;
+}
+.checkbox__control svg {
+  transition: transform 0.1s ease-in 25ms;
+  transform: scale(0);
+  transform-origin: bottom left;
+}
+
+.checkbox__input {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* grid-template-areas: "checkbox"; */
+}
+.checkbox__input > * {
+  grid-area: checkbox;
+}
+.checkbox__input input {
+  opacity: 0;
+  width: 1rem;
+  height: 1rem;
+}
+.checkbox__input input:focus + .checkbox__control {
+  box-shadow: 0 0 0 0.05em #fff, 0 0 0.15em 0.1em currentColor;
+}
+.checkbox__input input:checked + .checkbox__control svg {
+  transform: scale(0.9);
 }
